Overlapping cover images bug.

--- a/themes/bootprint/css/bootprint-custom.css
+++ b/themes/bootprint/css/bootprint-custom.css
@@ -177,7 +177,7 @@ select, .btn:not(.btn-link){vertical-align:top}
 .group .search {margin:1px 0}
 .checkboxFilter {border:1px solid #CCC;display:inline-table;margin-bottom:10px;padding:10px;width:auto}
 .checkboxFilter label {display:table}
-.sidebar .checkboxFilter {margin-left:8px;padding:0;width:100%;}
+.sidebar .checkboxFilter {margin-left:8px;padding:0;width:95.5%;}
 .sidebar .checkboxFilter .checkbox {margin:6px}
 
 /* -- MY RESEARCH -- */
