--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -6,6 +6,7 @@
 .group [class^=col-] {padding-left:0}
 .highlight{&:extend(mark);}
 .icon-bar {background-color:#888}
+img {max-width:100%}
 label.list-group-item {border-radius:0;font-weight:normal;margin-top:0;padding-left:35px}
 .list-group-item.title {font-weight:bold}
 #modal .modal-body > h2:first-child {display:none}
